# CHATSEC-SOC-Agent

./: LICENSE  Makefile  README.md  chat_logs.db  demo_agent_management.py  main.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_curl_tool.py  test_issues.py  wazuh_mcp.py
config/: settings.py
scripts/: dev.sh  setup.bat  setup.sh  start.sh
src/: __init__.py  utils.py
src/core/: agent.py  proactive_agents.py  wazuh_client.py
src/database/: __init__.py  models.py
src/mcp/: wazuh_mcp_server.py
src/ui/: __init__.py  chat.py  dashboard.py
src/utils/: __init__.py  datetime_utils.py  file_utils.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py
